--- a/FinalProject/Views/AdminImage/Index.cshtml
+++ b/FinalProject/Views/AdminImage/Index.cshtml
@@ -12,7 +12,7 @@
             <ul>
                 @foreach(var y in Model)
                 {
-                    @if (y.Visible)
+                    @if (!y.Visible)
                     {
                         <li class="d-flex gap-3">
                             <div>
@@ -22,9 +22,37 @@
                                 </div>
                             </div>
 
-                            <div class="d-flex flex-column align-items-center gap-3 w-100">
-                                <span><span class="fw-bold">Title: </span>@y.Title</span>
-                                <span><span class="fw-bold">Description: </span>@y.Description</span>
+                            <div class="d-flex flex-column align-items-center justify-content-around gap-3 w-100 border border-1 border-warning">
+
+                                <div class="d-flex flex-column">
+                                    <span><span class="fw-bold">Title: </span>@y.Title</span>
+                                    <span><span class="fw-bold">Description: </span>@y.Description</span>
+                                </div>
+
+                                <div class="d-flex gap-3">
+                                    <!--Details-->
+                                    <a class="btn btn-dark shadow rounded-pill py-2 px-3" href="@Url.Action("Details", "AdminImage", new {id = y.Id})">
+                                        <i class="fa-regular fa-eye"></i>
+                                    </a>
+                                    @if (User.IsInRole("ADMIN"))
+                                    {
+                                        <!--Edit-->
+                                        <a class="btn btn-dark shadow rounded-pill py-2 px-3" href="@Url.Action("Edit", "AdminImage", new {id = y.Id})">
+                                            <i class="fa-solid fa-pen-to-square"></i>
+                                        </a>
+
+                                        <!--Delete-->
+                                        <form asp-controller="AdminImage" asp-action="Delete" asp-route-id="@y.Id" method="post">
+
+                                            @Html.AntiForgeryToken()
+                                            <button type="submit" class="btn btn-danger shadow rounded-pill py-2 px-3">
+                                                <i class="fa-solid fa-trash"></i>
+                                            </button>
+
+                                        </form>
+                                    }
+                                </div>
+
                             </div>
                         </li>
                     }
