--- a/FinalProject/Views/AdminImage/Index.cshtml
+++ b/FinalProject/Views/AdminImage/Index.cshtml
@@ -12,50 +12,62 @@
             <ul>
                 @foreach(var y in Model)
                 {
-                    @if (!y.IsPrivate)
+                   @* @if (!y.IsPrivate)
                     {
-                        <li class="d-flex gap-3">
-                            <div>
-                                <!--Image-->
-                                <div class="card_image rounded">
-                                    <img class="rounded" src="@y.Img" alt="Error: @y.Title">
-                                </div>
+                    }*@
+                    <li class="d-flex gap-3">
+                        <div>
+                            <!--Image-->
+                            <div class="card_image rounded">
+                                <img class="rounded" src="@y.Img" alt="Error: @y.Title">
+                            </div>
+                        </div>
+
+                        <div class="d-flex flex-column align-items-center justify-content-around gap-3 w-100 border border-1 border-warning">
+
+                            <div class="d-flex flex-column">
+                                <span><span class="fw-bold">Title: </span>@y.Title</span>
+                                <span><span class="fw-bold">Description: </span>@y.Description</span>
                             </div>
 
-                            <div class="d-flex flex-column align-items-center justify-content-around gap-3 w-100 border border-1 border-warning">
-
-                                <div class="d-flex flex-column">
-                                    <span><span class="fw-bold">Title: </span>@y.Title</span>
-                                    <span><span class="fw-bold">Description: </span>@y.Description</span>
-                                </div>
-
-                                <div class="d-flex gap-3">
-                                    <!--Details-->
-                                    <a class="btn btn-dark shadow rounded-pill py-2 px-3" href="@Url.Action("Details", "AdminImage", new {id = y.Id})">
-                                        <i class="fa-regular fa-eye"></i>
+                            <div class="d-flex gap-3">
+                                <!--Details-->
+                                <a class="btn btn-dark shadow rounded-pill py-2 px-3" href="@Url.Action("Details", "AdminImage", new {id = y.Id})">
+                                    <i class="fa-regular fa-eye"></i>
+                                </a>
+                                @if (User.IsInRole("ADMIN"))
+                                {
+                                    <!--Edit-->
+                                    <a class="btn btn-dark shadow rounded-pill py-2 px-3" href="@Url.Action("Edit", "AdminImage", new {id = y.Id})">
+                                        <i class="fa-solid fa-pen-to-square"></i>
                                     </a>
-                                    @if (User.IsInRole("ADMIN"))
-                                    {
-                                        <!--Edit-->
-                                        <a class="btn btn-dark shadow rounded-pill py-2 px-3" href="@Url.Action("Edit", "AdminImage", new {id = y.Id})">
-                                            <i class="fa-solid fa-pen-to-square"></i>
-                                        </a>
 
-                                        <!--Delete-->
-                                        <form asp-controller="AdminImage" asp-action="Delete" asp-route-id="@y.Id" method="post">
+                                    <!--Delete-->
+                                    <form asp-controller="AdminImage" asp-action="Delete" asp-route-id="@y.Id" method="post">
 
-                                            @Html.AntiForgeryToken()
-                                            <button type="submit" class="btn btn-danger shadow rounded-pill py-2 px-3">
-                                                <i class="fa-solid fa-trash"></i>
-                                            </button>
+                                        @Html.AntiForgeryToken()
+                                        <button type="submit" class="btn btn-danger shadow rounded-pill py-2 px-3">
+                                            <i class="fa-solid fa-trash"></i>
+                                        </button>
 
-                                        </form>
-                                    }
-                                </div>
-
+                                    </form>
+                                }
                             </div>
-                        </li>
-                    }
+
+                            @if (!y.IsPrivate)
+                            {
+                                <div class="badge bg-info">
+                                    Public
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="badge bg-danger">
+                                    Private
+                                </div>
+                            }
+                        </div>
+                    </li>
                 }
             </ul>
         }
