fixed img and add controll on description

--- a/FinalProject/Views/Client/Index.cshtml
+++ b/FinalProject/Views/Client/Index.cshtml
@@ -9,7 +9,7 @@
         </div>
 
         <h2>Visualize Images</h2>
-        <ul id="y-posts">
+        <ul id="y-posts" class="d-flex flex-column gap-3">
                 
         </ul>
         
