--- a/FinalProject/Views/AdminImage/Index.cshtml
+++ b/FinalProject/Views/AdminImage/Index.cshtml
@@ -9,25 +9,28 @@
         <h2>Visualize Images</h2>
         @if(Model.Count > 0)
         {
-            <ul>
+            <ul class="d-flex flex-column gap-3">
                 @foreach(var y in Model)
                 {
                    @* @if (!y.IsPrivate)
                     {
                     }*@
                     <li class="d-flex gap-3">
-                        <div>
-                            <!--Image-->
-                            <div class="card_image rounded">
-                                <img class="rounded" src="@y.Img" alt="Error: @y.Title">
-                            </div>
+                        
+                        <!--Image-->
+                        <div class="card_image rounded border border-1 border-warning">
+                            <img class="my_img rounded" src="@y.Img" alt="Error: @y.Title">
                         </div>
+                        
 
                         <div class="d-flex flex-column align-items-center justify-content-around gap-3 w-100 border border-1 border-warning">
 
                             <div class="d-flex flex-column">
                                 <span><span class="fw-bold">Title: </span>@y.Title</span>
-                                <span><span class="fw-bold">Description: </span>@y.Description</span>
+                                @if(y.Description != null)
+                                {
+                                    <span><span class="fw-bold">Description: </span>@y.Description</span>
+                                }
                             </div>
 
                             <div class="d-flex gap-3">
