--- a/FinalProject/Views/AdminImage/Show.cshtml
+++ b/FinalProject/Views/AdminImage/Show.cshtml
@@ -13,7 +13,10 @@
 
         <div class="d-flex flex-column align-items-center gap-3 w-100">
             <span class="text-light rounded fw-bold bg-dark px-3 py-2">@Model.Title</span>
-            <span class="text-center fw-light rounded shadow p-3 w-100" style="max-width: 600px;">@Model.Description</span>
+            @if(Model.Description != null)
+            {
+                <span class="text-center fw-light rounded shadow p-3 w-100" style="max-width: 600px;">@Model.Description</span>
+            }
         </div>
 
         <div class="d-flex flex-column align-items-center">
