--- a/FinalProject/wwwroot/css/site.css
+++ b/FinalProject/wwwroot/css/site.css
@@ -20,3 +20,11 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.card_image{
+    width: 100%;
+}
+.my_img {
+    width: 100%;
+    object-fit: cover;
+}
