--- a/FinalProject/Views/Client/Index.cshtml
+++ b/FinalProject/Views/Client/Index.cshtml
@@ -3,7 +3,9 @@
 
 <section class="container border border-2 border-danger py-3 px-0">
     <div class="border border-2 border-primary">
-
+        <div>
+            <input type="text" id="search" class="form-control" placeholder="Search Title" onkeyup="loadPosts(this.value)"/>
+        </div>
         <div class="btn btn-primary py-2 px-2">
             <a class="text-light text-decoration-none" asp-area="" asp-controller="AdminImage" asp-action="Create">Post Image</a>
         </div>
