--- a/FinalProject/Views/AdminImage/Create.cshtml
+++ b/FinalProject/Views/AdminImage/Create.cshtml
@@ -5,19 +5,20 @@
 <div class="container">
     <form asp-controller="AdminImage" asp-action="Create" method="post">
         @Html.AntiForgeryToken()
-        <div class="mb-3">
+        <div class="mb-3 d-flex flex-column gap-2">
             <strong>Title:</strong>
-            <input asp-for="ImagesClass.Title" class="d-block w-100" />
+            <input asp-for="ImagesClass.Title" class="d-block w-100 form-control" />
             <span asp-validation-for="ImagesClass.Title" class="text-danger"></span>
         </div>
-        <div class="mb-3">
+        <div class="mb-3 d-flex flex-column gap-2">
             <strong>Description:</strong>
-            <input asp-for="ImagesClass.Description" class="d-block w-100" />
+            @*<input asp-for="ImagesClass.Description" class="d-block w-100" />*@
+            <textarea asp-for="ImagesClass.Description" class="d-block w-100 form-control"></textarea>
             <span asp-validation-for="ImagesClass.Description" class="text-danger"></span>
         </div>
-        <div class="mb-3">
+        <div class="mb-3 d-flex flex-column gap-2">
             <strong>URL Immagine:</strong>
-            <input asp-for="ImagesClass.Img" class="d-block w-100" />
+            <input asp-for="ImagesClass.Img" class="d-block w-100 form-control"/>
         </div>
         <div>
             <strong>Category:</strong>
