--- a/FinalProject/Views/AdminImage/Edit.cshtml
+++ b/FinalProject/Views/AdminImage/Edit.cshtml
@@ -6,19 +6,20 @@
 <div class="container">
     <form asp-controller="AdminImage" asp-action="Edit" method="post">
         @Html.AntiForgeryToken()
-        <div class="mb-3">
+        <div class="mb-3 d-flex flex-column gap-2">
             <strong>Title:</strong>
-            <input asp-for="ImagesClass.Title" class="d-block w-100" />
+            <input asp-for="ImagesClass.Title" class="d-block w-100 form-control" />
             <span asp-validation-for="ImagesClass.Title" class="text-danger"></span>
         </div>
-        <div class="mb-3">
+        <div class="mb-3 d-flex flex-column gap-2">
             <strong>Description:</strong>
-            <input asp-for="ImagesClass.Description" class="d-block w-100" />
+            @*<input asp-for="ImagesClass.Description" class="d-block w-100 form-control" />*@
+            <textarea asp-for="ImagesClass.Description" class="d-block w-100 form-control"></textarea>
             <span asp-validation-for="ImagesClass.Description" class="text-danger"></span>
         </div>
-        <div class="mb-3">
+        <div class="mb-3 d-flex flex-column gap-2">
             <strong>URL Immagine:</strong>
-            <input asp-for="ImagesClass.Img" class="d-block w-100" />
+            <input asp-for="ImagesClass.Img" class="d-block w-100 form-control" />
         </div>
         <div>
             <strong>Category:</strong>
@@ -32,8 +33,8 @@
         </div>
         <div class="mt-4">
             <!--Private-->
-            <input type="checkbox" id="@Model.ImagesClass.Id" name="PrivateText" value="@Model.PrivateText" checked="@Model.ImagesClass.IsPrivate"/>
-            <label for="@Model.ImagesClass.Id">Private</label>
+            <input type="checkbox" id="private" name="PrivateText" value="@Model.PrivateText" checked="@Model.ImagesClass.IsPrivate"/>
+            <label for="private">Private</label>
         </div>
         @*<div>
         <input asp-for="ImagesClass.Visible == false" type="checkbox" id="@Model.ImagesClass.Id" value="@Model.ImagesClass.Id" />
