--- a/FinalProject/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
+++ b/FinalProject/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
@@ -50,4 +50,6 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <script type="text/javascript" src="~/lib/testQR/qrcode.js"></script>
+    <script type="text/javascript" src="~/js/qr.js"></script>
 }
