add message & email table in db

--- a/FinalProject/Views/AdminImage/Index.cshtml
+++ b/FinalProject/Views/AdminImage/Index.cshtml
@@ -93,5 +93,8 @@
             <div>No Images in DB</div>   
         }
 
+       @* <div>
+            @(await Html.PartialAsync("../Message/Index"))
+        </div>*@
     </div>
 </section>
