--- a/FinalProject/Views/Shared/_Layout.cshtml
+++ b/FinalProject/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <header>
         @(await Html.PartialAsync("../Components/Navbar"))
     </header>
-    <div class="container">
+    <div class="container mt-5 pt-5">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
